Adding new logo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE HTML>
 <html manifest="javascripture.appcache">
 	<head>
+		<!-- Favicon code -->
+		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
+		<!-- End favicon code -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="google" content="notranslate" />
@@ -10,7 +29,38 @@
 		<style id="bodyFontSize"></style>
 	</head>
 	<body>
-	<div id="content"></div>
+	<div id="content">
+		<div class="full-page">
+			<div id="holder" class="content">
+				<div class="logo">
+					<img src="assets/javascripture.svg">
+					<div class="intro">
+						<h1>Javascripture</h1>
+						<p>JavaScripture is a tool to help you understand the bible better.</p>
+					</div>
+				</div>
+				<div class="button">
+					<button id="loadingJavascripture" disabled>Loading</button>
+					<script>
+						if ( localStorage ) {
+							document.write( '<p class="installation-info">Once the scripts have loaded, they will be cached, so the app will work offline.</p>' );
+						}
+					</script>
+				</div>
+				<div class="features">
+					<p>Features:<p/>
+					<ul>
+						<li>Interlinear English and Hebrew/Greek</li>
+						<li>Search for English, Hebrew or Greek words, Strong's numbers and morphological data (Greek only)</li>
+						<li>Additional word information, including Strong's roots and branches</li>
+						<li>Cross references</li>
+					</ul>
+					<a href="http://scruffian.wordpress.com/contact/">Having problems?</a>
+				</div>
+			</div>
+		</div>
+
+	</div>
 	<div id="dock" class="input">
 		<div class="heading-wrapper">
 			<form class="goToReference">
@@ -147,44 +197,6 @@
 			<strong>Morphology:</strong> <span class="wordControlPanelMorphology"></span><br />
 		</div>
 		<h3>Search results</h3>
-	</div>
-</div>
-
-<div class="full-page">
-	<div id="holder" class="content">
-		<div class="logo">
-			<svg width="128" height="128" xmlns="http://www.w3.org/2000/svg">
-			 <g>
-			  <title>Javascripture</title>
-			  <g id="svg_10">
-			   <path fill="black" d="m127.999985,0.028161l-111.333313,0c-9.204685,0 -16.666673,6.963784 -16.666673,15.553915l0,97.056138c0,8.590668 7.461988,15.554077 16.666673,15.554077l111.333313,0l0,-105.602276c0,0 -9.164078,0 -22.15741,0l0,42.161671l-12.595032,-11.753773l-12.594299,11.753773l0,-42.161671c-27.748608,0 -57.905231,0 -60.65329,0c-7.8703,0 -7.8703,-10.74092 0,-10.74092c4.545073,0 71.127983,0 108.000031,0l0,-11.820934z" id="svg_8"/>
-			  </g>
-			  <text transform="matrix(0.136985 0 0 0.136985 7.25415 217.045)" font-weight="normal" xml:space="preserve" text-anchor="middle" font-family="Monospace" font-size="350" id="svg_2" y="-779.99747" x="432.482218" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" fill="#ffffff">{js}</text>
-			 </g>
-			</svg>
-			<div class="intro">
-				<h1>Javascripture</h1>
-				<p>JavaScripture is a tool to help you understand the bible better.</p>
-			</div>
-		</div>
-		<div class="button">
-			<button id="loadingJavascripture" disabled>Loading</button>
-			<script>
-				if ( localStorage ) {
-					document.write( '<p class="installation-info">Once the scripts have loaded, they will be cached, so the app will work offline.</p>' );
-				}
-			</script>
-		</div>
-		<div class="features">
-			<p>Features:<p/>
-			<ul>
-				<li>Interlinear English and Hebrew/Greek</li>
-				<li>Search for English, Hebrew or Greek words, Strong's numbers and morphological data (Greek only)</li>
-				<li>Additional word information, including Strong's roots and branches</li>
-				<li>Cross references</li>
-			</ul>
-			<a href="http://scruffian.wordpress.com/contact/">Having problems?</a>
-		</div>
 	</div>
 </div>
 
