--- a/index.html
+++ b/index.html
@@ -278,6 +278,17 @@
 			}
 		}, false);
 	}, false);
+
+	// Add a service worker for PWA
+	if ('serviceWorker' in navigator) {
+	  navigator.serviceWorker.register('/sw.js').then(function(registration) {
+	    // Registration was successful
+	    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+	  }).catch(function(err) {
+	    // registration failed :(
+	    console.log('ServiceWorker registration failed: ', err);
+	  });
+	}
 </script>
 
 <script>
