another attempt to fix appcache

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="javascripture.appcache">
+<html manifest="/javascripture.appcache">
 	<head>
 		<script type="text/javascript">
 			var host = "javascripture.org";
