remove service worker as a i think its messing with appcache

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 		}, false);
 	}, false);
 
-	// Add a service worker for PWA
+	/* Add a service worker for PWA
 	if ('serviceWorker' in navigator) {
 	  navigator.serviceWorker.register('/sw.js').then(function(registration) {
 	    // Registration was successful
@@ -331,7 +331,7 @@
 	    // registration failed :(
 	    console.log('ServiceWorker registration failed: ', err);
 	  });
-	}
+	}*/
 </script>
 
 <script>
