--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<span id="showGoToReference" class="reading-mode-switch icon-book"></span>
 		<div class="verse">
 			<div id="verse">
-				<div id="loading">Loading...</div>
+				<div id="loading" class="loading">Loading...</div>
 			</div>
 		</div>
 	</div>
