clear local storage

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<li>Additional word information, including Strong's roots and branches</li>
 						<li>Cross references</li>
 					</ul>
-					<a href="http://scruffian.wordpress.com/contact/">Having problems?</a>
+					Having problems? <a href="http://scruffian.wordpress.com/contact/">Email me</a> or <a href="/clear.html">Clear settings and start over</a></p>
 				</div>
 			</div>
 		</div>
@@ -73,6 +73,7 @@
 		<div class="verse">
 			<div id="verse">
 				<div id="loading" class="loading">Loading...</div>
+				<p>Having problems? <a href="/clear.html">Clear settings and start over</a></p>
 			</div>
 		</div>
 	</div>
