--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
 <!-- These modules are loaded by the worker-->
 <script src="data/kjvdwyer7.js"></script>
 <script src="data/web3.js"></script>
-<script src="data/hebrew-with-morph5.js"></script>
-<script src="data/jonah.js"></script>
+<script src="data/hebrew.js"></script>
 <script src="data/greek4.js"></script>
 <script src="data/strongsObjectWithFamilies2.js"></script>
 <script src="data/crossReferences.js"></script>
