Try clearing local storage when reloading again

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 				// Browser downloaded a new app cache.
 				localStorage.clear();
 				console.log(localStorage);
+				console.log('test');
 				var r = confirm( 'A new version of JavaScripture is available. Press OK to reload and use it.' );
 				if ( r == true ) {
 				    window.location.reload();
