--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="full-page">
 			<div id="holder" class="content">
 				<div class="logo">
-					<img src="assets/javascripture.svg">
+					<img src="assets/javascripture.svg" width="300" height="300">
 					<div class="intro">
 						<h1>Javascripture</h1>
 						<p>JavaScripture is a tool to help you understand the bible better.</p>
