--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="full-page">
 			<div id="holder" class="content">
 				<div class="logo">
-					<img src="assets/javascripture.svg" width="300" height="300">
+					<img src="/javascripture.svg" width="300" height="300">
 					<div class="intro">
 						<h1>Javascripture</h1>
 						<p>JavaScripture is a tool to help you understand the bible better.</p>
@@ -77,12 +77,6 @@
 			</div>
 		</div>
 	</div>
-
-	<script type="text/template" id="bookmark-template">
-		<% var reference = { book: book, chapter: chapter, verse: verse }; %>
-		<% var link = javascripture.modules.reference.createReferenceLink( reference ); %>
-		<a href="#<%= link %>"><%= book %> <%= chapter %>:<%= verse %></a><a href="#" class="icon-cross remove" aria-hidden="true"></a>;
-	</script>
 
 </div>
 
