--- a/index.html
+++ b/index.html
@@ -81,26 +81,7 @@
 </div>
 
 <div class="wordControlPanelTemplate">
-	<div class="content-padding">
-		<style></style>
-		<div class="word-details">
-			<span class="wordControlPanelEnglish"></span> | <span class="wordControlPanelLemma"></span> | <span class="wordControlPanelTransliteration"></span> | <span class="wordControlPanelPronounciation"></span>
-			<br />
-			<br />
-			<div class="word-tree" id="wordTreeRoots"></div>
-			<div class="word-tree" id="wordTreeBranches"></div>
-			<div class="word-tree" id="wordTreeFamily"></div>
-		</div>
-		<br />
-		<div class="definitions">
-			<strong>KJV Usage:</strong> <span class="wordControlPanelKJVDef"></span><br />
-			<br />
-			<strong>Derivation:</strong> <span class="wordControlPanelDerivation"></span><br />
-			<br />
-			<strong>Morphology:</strong> <span class="wordControlPanelMorphology"></span><br />
-		</div>
-		<h3>Search results</h3>
-	</div>
+	<p>Having problems? <a href="/clear.html">Clear settings and start over</a></p>
 </div>
 
 </body>
