--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 	if('serviceWorker' in navigator) {
 		navigator.serviceWorker
-			.register('/sw.js')
+			.register('/sw.js?14')
 			.then(function( reg ) { console.log("Service Worker Registered", reg); });
 	}
 
