add an error state

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 		<style id="bodyFontSize"></style>
 	</head>
 	<body>
+		<div class="errors">
+			<div id="loading" class="loading">Loading...</div>
+			<br /><br />
+			<p>If you can see this, something probably went wrong. <a href="/clear.html">Clear settings and start over</a> or <a href="http://scruffian.wordpress.com/contact/">Email me</a></p>
+		</div>
+
 
 	<div id="content">
 		<div class="full-page">
@@ -63,12 +69,6 @@
 			</div>
 		</div>
 	</div>
-</div>
-
-<div class="referencePanel" id="reference">
-	<div id="loading" class="loading">Loading...</div>
-
-	<p>Having problems? <a href="/clear.html">Clear settings and start over</a></p>
 </div>
 
 </body>
