update contact form address

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="errors">
 			<div id="loading" class="loading">Loading...</div>
 			<br /><br />
-			<p>If you can see this, something probably went wrong. <a href="/clear.html">Clear settings and start over</a> or <a href="http://scruffian.wordpress.com/contact/">Email me</a></p>
+			<p>If you can see this, something probably went wrong. <a href="/clear.html">Clear settings and start over</a> or <a href="https://ben.blog/contact/">Email me</a></p>
 		</div>
 
 
