add a help video

--- a/help/index.html
+++ b/help/index.html
@@ -1,1 +1,1 @@
-coming soon
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7Gx1_jLYt4Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
