--- a/help/index.html
+++ b/help/index.html
@@ -1,3 +1,9 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7Gx1_jLYt4Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/sBP2AKfQOM8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7SMi-GGt0Kg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Mc4UP4ZNblg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_aSPn_N9uKY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
