--- a/help/index.html
+++ b/help/index.html
@@ -1,9 +1,26 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7Gx1_jLYt4Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<html>
+	<body>
+		<h1>Help</h1>
+		<h2>Videos</h2>
+		<p>Here are some video screen casts which explain things</p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/7Gx1_jLYt4Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sBP2AKfQOM8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7SMi-GGt0Kg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Mc4UP4ZNblg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/_aSPn_N9uKY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<h2>Features</h2>
+		<p>This is a list of the main features of Javascripture with some explanation and context</p>
+		<ul>
+			<li>
+				<strong>Offline</strong><br/>
+				Javascripture should work offline if your brower supports it. It uses a service worker which has <a href="https://caniuse.com/#feat=serviceworkers">pretty good support</a> these days.
+			</li>
+			<li>
+				<strong>Word tree</strong><br />
+				Strongs dictionary defines roots for each word. Javascripture uses this data to also create "branches" for each word too. A branch is a word which has the current word as its root. This makes it easier to find related words.
+			</li>
+			<li>
+				<strong>Hovering</strong></br>
+				When you hover over a word, all the other words with the same strongs number are highlighted.
+			</li>
+		</ul>
+		<p><a href="http://scruffian.wordpress.com/contact/">Having problems? Email for help!</a></p>
+	</body>
+</html>
