--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="errors">
 			<div id="loading" class="loading">Loading...</div>
 			<br /><br />
-			<p>If you can see this, something probably went wrong. <a href="/clear.html">Clear settings and start over</a> or <a href="https://ben.blog/contact/">Email me</a></p>
+			<p>If you can see this, something probably went wrong. <a href="/clear.html">Clear settings and start over</a>, <a href="https://ben.blog/contact/">Email me</a> or use <a href="https://javascripture.xyz">an older stable version</a>.</p>
 		</div>
 
 
@@ -64,7 +64,7 @@
 					</div>
 				</div>
 				<div class="features">
-					<p>Having problems? <a href="http://scruffian.wordpress.com/contact/">Email me</a> or <a href="/clear.html">Clear settings and start over</a></p>
+					<p>Having problems? <a href="http://scruffian.wordpress.com/contact/">Email me</a>, <a href="/clear.html">Clear settings and start over</a> or use <a href="https://javascripture.xyz">an older stable version</a>.</p>
 				</div>
 			</div>
 		</div>
