--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
 <script src="data/hebrew.js"></script>
 <script>loadingStatus( 'Greek', 60 );</script>
 <script src="data/greek4.js"></script>
+<script>loadingStatus( 'ESV', 60 );</script>
+<script src="data/esv.js"></script>
 <script>loadingStatus( 'Strongs', 70 );</script>
 <script src="data/strongsObjectWithFamilies2.js"></script>
 <script>loadingStatus( 'cross references', 80 );</script>
