--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 <script src="data/KJV.js"></script>
 <script>javascripture.data.kjv=KJV.books</script>
 <script>loadingStatus( 'WEB', 40 );</script>
-<script src="data/web.js"></script>
-<script>javascripture.data.web=WEB.books</script>
+<script src="data/WEB.js"></script>
+<script>javascripture.data.web=WEB</script>
 <script>loadingStatus( 'Hebrew', 50 );</script>
 <script src="data/morphhb.js"></script>
 <script>javascripture.data.hebrew=morphhb</script>
