--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <script>javascripture.data.kjv=KJV.books</script>
 <script>loadingStatus( 'WEB', 40 );</script>
 <script src="data/WEB.js"></script>
-<script>javascripture.data.web=WEB</script>
+<script>javascripture.data.web=WEB.books</script>
 <script>loadingStatus( 'Hebrew', 50 );</script>
 <script src="data/morphhb.js"></script>
 <script>javascripture.data.hebrew=morphhb</script>
