--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
 			.then( function( reg ) {
 				console.log("Service Worker Registered", reg);
 			});
+
+		// Handler for messages coming from the service worker
+		navigator.serviceWorker.addEventListener('message', function( event ) {
+			// Send to react
+			javascripture.sw = event.data;
+		} );
 	}
 
 	// Attach web workers
