--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
 <script>loadingStatus( 'ESV', 60 );</script>
 <script src="data/ESV.js"></script>
 <script>javascripture.data.esv=ESV.books</script>
+<script>loadingStatus( 'FarOPV', 60 );</script>
+<script src="data/FarOPV.js"></script>
+<script>javascripture.data.faropv=FarOPV.books</script>
+<script>loadingStatus( 'FarTPV', 60 );</script>
+<script src="data/FarTPV.js"></script>
+<script>javascripture.data.fartpv=FarTPV.books</script>
 <script>loadingStatus( 'Strongs', 70 );</script>
 <script src="data/strongsObjectWithFamilies2.js"></script>
 <script>loadingStatus( 'cross references', 80 );</script>
