use the list of references to load the dropdown

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					</div>
 					<div class="loading">
 						<div class="loading-bar" id="loadingJavascripture">
-							Loading
+							Loading…
 						</div>
 					</div>
 					<div class="features">
