add the lemmas to the LC

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 <script src="data/crossReferences.js"></script>
 <script>loadingStatus( 'Literal Consistent', 90 );</script>
 <script src="data/literalConsistent.js"></script>
+<script src="data/lemmas.js"></script>
 <script src="data/literalConsistentExtra.js"></script>
 <script>loadingStatus( 'interface', 95 );</script>
 <script src="build/bundle.js"></script>
